renamed ModTrans inot Refeinemnt

--- a/paper.tex
+++ b/paper.tex
@@ -594,7 +594,7 @@ immediately prove this CTL statement. This application of the meta-theorem
 of Correctness of attack trees saves us proving the CTL formula tediously 
 by exploring the state space in Isabelle proofs. Alternatively, we could use 
 the generated code for the function \texttt{is\_attack\_tree} in Scala 
-(see Section \ref{sec:at}) to check that a refined attack of the above is valid.
+(see \cite{kam:18b}) to check that a refined attack of the above is valid.
 
 \section{Refinement}
 \label{sec:ref}
